--- a/Source/index.html
+++ b/Source/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>[Your Bot] - A Discord Bot</title>
@@ -12,11 +13,16 @@
   <link rel="stylesheet" type="text/css" href="./css/shadow.css">
   <link rel="stylesheet" type="text/css" href="./css/loading.css">
   <link rel="stylesheet" type="text/css" href="./css/cursor.css">
-</head>  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+  integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <body class="on">
   <div class="loading" id="loading-box">
-    <div class="loading-item"><div class="loading-progress"></div></div>
+    <div class="loading-item">
+      <div class="loading-progress"></div>
+    </div>
   </div>
   <main class="main">
     <!-- navbar -->
@@ -34,27 +40,32 @@
             <!-- You can change the href value and the text value -->
             <div class="navs-item notbtn"><a href="#features" class="txt-uppercase">Features</a></div>
             <div class="navs-item notbtn"><a href="#" class="txt-uppercase">Support</a></div>
-            <div class="navs-item"><a href="login.html"><button class="btn txt-uppercase shadow-sm">Register</button></a></div>
-            <div class="navs-item"><a href="login.html"><button class="btn txt-uppercase shadow-sm">Login</button></a></div>
+            <div class="navs-item"><a href="register.html"><button
+                  class="btn txt-uppercase shadow-sm">Register</button></a></div>
+            <div class="navs-item"><a href="login.html"><button class="btn txt-uppercase shadow-sm">Login</button></a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- navbar end -->		
+    <!-- navbar end -->
     <!-- jumbotron -->
     <div class="jumbotron">
       <div class="container">
         <div class="jumbotron-items">
           <div class="jumbotron-item">
             <span class="jumbotron-t">Why EasyRead?</span>
-            <p class="jumbotron-d">Easy read is an AI-powered tool utilizes advanced natural language processing algorithms to summarize complex text into concise, easy-to-understand summaries. In addition, it can generate practice tests and study guides based on the text, allowing users to reinforce their knowledge and prepare for exams efficiently.</p>
+            <p class="jumbotron-d">Easy read is an AI-powered tool utilizes advanced natural language processing
+              algorithms to summarize complex text into concise, easy-to-understand summaries. In addition, it can
+              generate practice tests and study guides based on the text, allowing users to reinforce their knowledge
+              and prepare for exams efficiently.</p>
             <div class="jumbotron-buttons">
               <button class="btn" onclick="location.href='#features'">Features</button>
               <button class="btn blue" onclick="location.href='#'">Get Started</button>
             </div>
           </div>
           <div class="jumbotron-item">
-            <img src="./img/img.svg" alt="image"> 
+            <img src="./img/img.svg" alt="image">
           </div>
         </div>
       </div>
@@ -72,21 +83,24 @@
           <img class="feature-img" src="./img/feature2.svg"></img>
           <div class="feature-info">
             <h2 class="feature-info-t">Step 1 - Login</h2>
-            <p class="feature-info-d">Click on the login button in the top right and follow the steps. If you do not wish to log in you may continue as a guest.</p>
+            <p class="feature-info-d">Click on the login button in the top right and follow the steps. If you do not
+              wish to log in you may continue as a guest.</p>
           </div>
         </div>
         <div class="feature">
           <img class="feature-img" src="./img/feature1.png"></img>
           <div class="feature-info">
             <h2 class="feature-info-t">Step 2 - Upload Your Article</h2>
-            <p class="feature-info-d">After Logging In, you will be redirected to a page where you can upload your article. Copy your article from the source and paste it into the box provided.</p>
+            <p class="feature-info-d">After Logging In, you will be redirected to a page where you can upload your
+              article. Copy your article from the source and paste it into the box provided.</p>
           </div>
         </div>
         <div class="feature">
           <img class="feature-img" src="./img/feature3.svg"></img>
           <div class="feature-info">
             <h2 class="feature-info-t">Step 3 - Select Your Task</h2>
-            <p class="feature-info-d">After uploading your article, select the type of help that you would like to recieve. After selecting your task you should get your results in under 2 minutes.</p>
+            <p class="feature-info-d">After uploading your article, select the type of help that you would like to
+              recieve. After selecting your task you should get your results in under 2 minutes.</p>
           </div>
         </div>
       </div>
@@ -109,7 +123,7 @@
           <span><i class="fas fa-hashtag"></i> 100,000 Articles</span>
         </div>
       </div>
-    </div>  
+    </div>
   </div>
   <div class="footer">
     <div class="container">
@@ -123,7 +137,7 @@
             <li><a href="#">Partner 4</a></li>
             <li><a href="#">Partner 5</a></li>
           </ul>
-        </div>				
+        </div>
         <div class="footer-item">
           <span>Links</span>
           <ul class="footer-ul">
@@ -140,4 +154,5 @@
   <script type="text/javascript" src="./js/script.js"></script>
   <script type="text/javascript" src="./js/cursor.js"></script>
 </body>
+
 </html>
