--- a/Source/landingPage.html
+++ b/Source/landingPage.html
@@ -40,7 +40,8 @@
                 <div class="card">
                     <div class="head">
                         <span class="icon">
-                            <i class="icon ion-pound"></i>
+                            <p class="fa fa-hand-paper-o"> </p>
+
                         </span>
                         <span class="stat">
                             How To Use
