--- a/Source/search.html
+++ b/Source/search.html
@@ -40,10 +40,9 @@
       <span class="credits">EasyRead
       </span>
     </div>
-    <div>
-      <p></p>
-      <textarea id="askEasyRead" name="askEasyRead" rows="1" cols="50"></textarea>
-      <button> Button </button>
+    <div class="container">
+      <textarea></textarea>
+      <button type="submit">Submit</button>
     </div>
 </body>
 
