--- a/Source/search.html
+++ b/Source/search.html
@@ -8,8 +8,7 @@
   <title>EasyReadAIAccess</title>
 </head>
 
-<body>
-  <link rel="stylesheet" type="text/css" href="./css/landingPage.css">
+  <link rel="stylesheet" type="text/css" href="./css/search.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -40,10 +39,13 @@
       <span class="credits">EasyRead
       </span>
     </div>
-    <div class="container">
-      <textarea></textarea>
+
+  <body>
+    <div>
+      <textarea rows="1" cols="50"></textarea>
       <button type="submit">Submit</button>
-    </div>
-</body>
+   </div>
+  </body>
+
 
 </html>
