--- a/Source/landingPage.html
+++ b/Source/landingPage.html
@@ -72,174 +72,171 @@
                             <i class="icon ion-code-working"></i>
                         </span>
                         <span class="stat">
-                            CSGO Status
+                            <button type="msghistory">Message History</button>
                         </span>
                         <div class="status">
                         </div>
                     </div>
                     <div class="body">
-                        <h2>Cheat is currently $_status</h2>
-                        <p>
-                            The server is running normally and no issues have recently been detected. If you notice an
-                            outage, please report it to the administrator.
-                        </p>
+                        <textarea rows="1" cols="50">Text Placeholder</textarea>
                     </div>
                     <div class="footer">
                         <div class="user">
                             <div class="user-icon">
-                            </div>
-                            <span class="username">
-                                uplusion23
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-verticle">
-                    <div class="card-small">
-                        <span class="title">
-                            Active Users
-                        </span>
-                        <h2 class="text">12</h2>
-                        <div class="graph">
-                            <div class="bar" data-day="sunday">
-                                <div class="bar-content"></div>
-                            </div>
-                            <div class="bar" data-day="monday">
-                                <div class="bar-content"></div>
-                            </div>
-                            <div class="bar" data-day="tuesday">
-                                <div class="bar-content"></div>
-                            </div>
-                            <div class="bar" data-day="wednesday">
-                                <div class="bar-content"></div>
-                            </div>
-                            <div class="bar" data-day="thursday">
-                                <div class="bar-content"></div>
-                            </div>
-                            <div class="bar" data-day="friday">
-                                <div class="bar-content"></div>
-                            </div>
-                            <div class="bar" data-day="saturday">
-                                <div class="bar-content"></div>
+                                <div>
+                                    <span class="username">
+                                        Preview
+                                    </span>
+                                </div>
                             </div>
                         </div>
+                        <div class="card-verticle">
+                            <div class="card-small">
+                                <span class="title">
+                                    Active Users
+                                </span>
+                                <h2 class="text">12</h2>
+                                <div class="graph">
+                                    <div class="bar" data-day="sunday">
+                                        <div class="bar-content"></div>
+                                    </div>
+                                    <div class="bar" data-day="monday">
+                                        <div class="bar-content"></div>
+                                    </div>
+                                    <div class="bar" data-day="tuesday">
+                                        <div class="bar-content"></div>
+                                    </div>
+                                    <div class="bar" data-day="wednesday">
+                                        <div class="bar-content"></div>
+                                    </div>
+                                    <div class="bar" data-day="thursday">
+                                        <div class="bar-content"></div>
+                                    </div>
+                                    <div class="bar" data-day="friday">
+                                        <div class="bar-content"></div>
+                                    </div>
+                                    <div class="bar" data-day="saturday">
+                                        <div class="bar-content"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-small">
+                                <span class="title">
+                                    Overview
+                                </span>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-small">
-                        <span class="title">
-                            Overview
-                        </span>
+                    <div class="stats">
                     </div>
                 </div>
-            </div>
-            <div class="stats">
-            </div>
-        </div>
-        <div class="page noflex" data-page="users">
-            <div class="header">
-                <div class="title">
-                    <h2>Users</h2>
-                </div>
-            </div>
-            <div class="grid">
-                <div class="user-edit">
+                <div class="page noflex" data-page="users">
                     <div class="header">
-                        <span class="icon">
-                            <i class="icon ion-person"></i>
-                        </span>
-                        <span class="user-edit-name">$_USERNAME</span>
-                        <a href="#" class="close"><i class="icon ion-close-round"></i></a>
-                    </div>
-                </div>
-                <div class="users-table">
-                    <div class="users-item header">
-                        <div class="table-item noflex">
-                            ID
-                        </div>
-                        <div class="table-item">
-                            Email Address
-                        </div>
-                        <div class="table-item">
-                            Username
-                        </div>
-                        <div class="table-item">
-                            Nickname
-                        </div>
-                        <div class="table-item">
-                            Active
-                        </div>
-                        <div class="table-item">
-                            Premium
+                        <div class="title">
+                            <h2>Users</h2>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="page noflex" data-page="download">
-            <div class="header">
-                <div class="title">
-                    <h2>Download</h2>
-                </div>
-            </div>
-            <div class="grid">
-                <div class="card wide">
-                    <div class="head">
-                        <span class="icon">
-                            <i class="icon ion-code-working"></i>
-                        </span>
-                        <span class="stat">
-                            Cheat Client
-                        </span>
-                        <div class="status">
-                        </div>
-                    </div>
-                    <div class="body">
-                        <h2>Latest Version: v$_VERSION</h2>
-                        <p>
-                            changelog here
-                        </p>
-                    </div>
-                    <div class="footer">
-                        <div class="user">
-                            <div class="user-icon">
+                    <div class="grid">
+                        <div class="user-edit">
+                            <div class="header">
+                                <span class="icon">
+                                    <i class="icon ion-person"></i>
+                                </span>
+                                <span class="user-edit-name">$_USERNAME</span>
+                                <a href="#" class="close"><i class="icon ion-close-round"></i></a>
                             </div>
-                            <span class="username">
-                                Administrator
-                            </span>
                         </div>
-                        <a class="download" href="#">Download <i class="icon ion-archive"></i></a>
+                        <div class="users-table">
+                            <div class="users-item header">
+                                <div class="table-item noflex">
+                                    ID
+                                </div>
+                                <div class="table-item">
+                                    Email Address
+                                </div>
+                                <div class="table-item">
+                                    Username
+                                </div>
+                                <div class="table-item">
+                                    Nickname
+                                </div>
+                                <div class="table-item">
+                                    Active
+                                </div>
+                                <div class="table-item">
+                                    Premium
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="page noflex" data-page="download">
+                    <div class="header">
+                        <div class="title">
+                            <h2>Download</h2>
+                        </div>
+                    </div>
+                    <div class="grid">
+                        <div class="card wide">
+                            <div class="head">
+                                <span class="icon">
+                                    <i class="icon ion-code-working"></i>
+                                </span>
+                                <span class="stat">
+                                    Cheat Client
+                                </span>
+                                <div class="status">
+                                </div>
+                            </div>
+                            <div class="body">
+                                <h2>Latest Version: v$_VERSION</h2>
+                                <p>
+                                    changelog here
+                                </p>
+                            </div>
+                            <div class="footer">
+                                <div class="user">
+                                    <div class="user-icon">
+                                    </div>
+                                    <span class="username">
+                                        Administrator
+                                    </span>
+                                </div>
+                                <a class="download" href="#">Download <i class="icon ion-archive"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="page noflex" data-page="about">
+                    <div class="header">
+                        <div class="title">
+                            <h2>About</h2>
+                        </div>
+                    </div>
+                    <div class="info-container">
+                        <div class="info">
+                            <a href="http://uplusion23.net/" target="_blank">Developer</a>
+                            <span>uplusion23</span>
+                        </div>
+                        <div class="info">
+                            <a href="#" target="_blank">Dashboard Version</a>
+                            <span>1.0.0</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="sidebar">
+
+            </div>
+             <div class="dialog">
+                <div class="dialog-block">
+                    <h2>Are you sure you want to logout?</h2>
+                    <div class="controls">
+                        <a href="#" class="button">Logout</a>
+                        <a data-dialog-action="cancel" href="#" class="button">Cancel</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="page noflex" data-page="about">
-            <div class="header">
-                <div class="title">
-                    <h2>About</h2>
-                </div>
-            </div>
-            <div class="info-container">
-                <div class="info">
-                    <a href="http://uplusion23.net/" target="_blank">Developer</a>
-                    <span>uplusion23</span>
-                </div>
-                <div class="info">
-                    <a href="#" target="_blank">Dashboard Version</a>
-                    <span>1.0.0</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="sidebar">
-
-    </div>
-     <div class="dialog">
-        <div class="dialog-block">
-            <h2>Are you sure you want to logout?</h2>
-            <div class="controls">
-                <a href="#" class="button">Logout</a>
-                <a data-dialog-action="cancel" href="#" class="button">Cancel</a>
-            </div>
-        </div>
-    </div>
-</div>
-<script type="text/javascript" src="./js/landingPage.js"></script>
+        <script type="text/javascript" src="./js/landingPage.js"></script>
+        <script src="accountsystem.js"></script>
