--- a/Source/landingPage.html
+++ b/Source/landingPage.html
@@ -39,8 +39,10 @@
             <div class="grid">
                 <div class="card">
                     <div class="head">
-                        <span class="icon">
-                            <p class="fa fa-hand-paper-o"> </p>
+                        <span class="icon2">
+                            <div class="icon-container">
+                                <ion-icon name="alert-circle-outline"></ion-icon>
+                            </div>
 
                         </span>
                         <span class="stat">
@@ -69,7 +71,9 @@
                 <div class="card">
                     <div class="head">
                         <span class="icon">
-                            <i class="icon ion-code-working"></i>
+                            <div class="icon-container">
+                                <ion-icon name="chatbubbles-outline"></ion-icon>
+                            </div>
                         </span>
                         <span class="stat">
                             <button type="msghistory">Message History</button>
