--- a/Source/landingPage.html
+++ b/Source/landingPage.html
@@ -46,22 +46,26 @@
 
                         </span>
                         <span class="stat">
-                            How To Use
+                            Utilization
                         </span>
                         <div class="status">
                         </div>
                     </div>
                     <div class="body">
-                        <h2>Server is currently $_status</h2>
                         <p>
-                            The server is running normally and no issues have recently been detected. If you notice an
-                            outage, please report it to the administrator.
+                           Enter a prompt for the Easy Read AI to register and respond to. 
+                           Not the answer your looking for? Try a more specific question 
+                           that is easy for our AI to understand.
+                           <br><br>
+                            <hr>
+                            <hr>
+                            <br>
+                           Gmail: EasyReadAI@gmail.com <br>
+                           Twitter: @EasyReadAI
                         </p>
                     </div>
                     <div class="footer">
                         <div class="user">
-                            <div class="user-icon">
-                            </div>
                             <span class="username">
                                 Administrator
                             </span>
@@ -76,13 +80,17 @@
                             </div>
                         </span>
                         <span class="stat">
-                            <button type="msghistory">Message History</button>
+                            History
                         </span>
                         <div class="status">
                         </div>
                     </div>
                     <div class="body">
-                        <textarea rows="1" cols="50">Text Placeholder</textarea>
+                        <h2>Server is currently $_status</h2>
+                        <p>
+                            The server is running normally and no issues have recently been detected. If you notice an
+                            outage, please report it to the administrator.
+                        </p>
                     </div>
                     <div class="footer">
                         <div class="user">
@@ -99,6 +107,9 @@
                                 <span class="title">
                                     Active Users
                                 </span>
+                                <div class="icon-container2">
+                                    <ion-icon name="earth-outline"></ion-icon>
+                                </div>
                                 <h2 class="text">12</h2>
                                 <div class="graph">
                                     <div class="bar" data-day="sunday">
