--- a/Source/index.html
+++ b/Source/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>[Your Bot] - A Discord Bot</title>
+  <title>EasyRead AI</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="./img/logo.png">
 
