--- a/Source/landingPage.html
+++ b/Source/landingPage.html
@@ -67,7 +67,7 @@
                     <div class="footer">
                         <div class="user">
                             <span class="username">
-                                Administrator
+                                Computation
                             </span>
                         </div>
                     </div>
@@ -80,32 +80,33 @@
                             </div>
                         </span>
                         <span class="stat">
-                            History
+                            Examples
                         </span>
                         <div class="status">
                         </div>
                     </div>
                     <div class="body">
-                        <h2>Server is currently $_status</h2>
+                        <h2><br>No cheating prohibited in any way or form!</h2>
                         <p>
-                            The server is running normally and no issues have recently been detected. If you notice an
-                            outage, please report it to the administrator.
+                            <br><br>
+                            Can you create me a practice test for my bio test on evolution?
+                            <br><br>
+                            Could you provide me a detailed description of what cellular respiration is?
+                            <br><br>
+                            How do you traverse through an array using one loop?
+                            <br><br>
+                            <hr><hr>
+
                         </p>
                     </div>
                     <div class="footer">
                         <div class="user">
-                            <div class="user-icon">
-                                <div>
-                                    <span class="username">
-                                        Preview
-                                    </span>
-                                </div>
-                            </div>
+                            
                         </div>
                         <div class="card-verticle">
                             <div class="card-small">
                                 <span class="title">
-                                    Active Users
+                                    Innovation
                                 </span>
                                 <div class="icon-container2">
                                     <ion-icon name="earth-outline"></ion-icon>
