--- a/Source/anotherone.html
+++ b/Source/anotherone.html
@@ -9,64 +9,89 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ChatGPT API</title>
-</head>
-
-<body>
-    <main>
-        <h1>ChatGPT-3.5-Turbo</h1>
-        <form action="">
-            <input type="text" name="message" id="message">
-            <button type="submit">Send</button>
-        </form>
-        <div id="chat-log">
-
+<div class="container">
+    <div class="drawer">
+        <a class="navicon" href="landingPage.html">
+            <ion-icon name="home-outline"></ion-icon>
+        </a>
+        <div class="menu">
+            <a data-menu="dashboard" href="Summary.html">
+                <ion-icon name="newspaper-outline"></ion-icon>
+            </a>
+            <a data-menu="users" href="longTest.html">
+                <ion-icon name="document-text-outline"></ion-icon>
+            </a>
+            <a data-dialog="logout" href="shortTest.html">
+                <ion-icon name="document-outline"></ion-icon>
+            </a>
+            <a data-menu="download" href="settings.html">
+                <ion-icon name="settings-outline"></ion-icon>
+            </a>
+            <a data-menu="about" href="index.html">
+                <ion-icon name="exit-outline"></ion-icon>
+            </a>
         </div>
-    </main>
-    <script>
-        const chatLog = document.getElementById('chat-log');
-        const message = document.getElementById('message');
-        const form = document.querySelector('form');
-        form.addEventListener('submit', (e) => {
-            e.preventDefault();
-            const messageText = message.value;
-            const messageElement = document.createElement('div');
-            messageElement.classList.add('message');
-            messageElement.classList.add('message--sent');
-            messageElement.innerHTML = `
+        <span class="credits">EasyRead
+        </span>
+    </div>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Summarizer</title>
+    </head>
+
+    <body>
+        <main>
+            <h1>Enter Text Below</h1>
+            <form action="">
+                <input type="text" name="message" id="message">
+                <button type="submit">Send</button>
+            </form>
+            <div id="chat-log">
+
+            </div>
+        </main>
+        <script>
+            const chatLog = document.getElementById('chat-log');
+            const message = document.getElementById('message');
+            const form = document.querySelector('form');
+            form.addEventListener('submit', (e) => {
+                e.preventDefault();
+                const messageText = message.value;
+                const messageElement = document.createElement('div');
+                messageElement.classList.add('message');
+                messageElement.classList.add('message--sent');
+                messageElement.innerHTML = `
                 <div class "message__text">${messageText}</div>
             `;
-            chatLog.appendChild(messageElement);
-            chatLog.scrollTop = chatLog.scrollHeight;
-            fetch('http://localhost:4000', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    message: messageText
+                chatLog.appendChild(messageElement);
+                chatLog.scrollTop = chatLog.scrollHeight;
+                fetch('http://localhost:8000', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        message: messageText
+                    })
                 })
-            })
-                .then(res => res.json())
-                .then(data => {
-                    const messageElement = document.createElement('div');
-                    messageElement.classList.add('message');
-                    messageElement.classList.add('message--received');
-                    messageElement.innerHTML = `
+                    .then(res => res.json())
+                    .then(data => {
+                        const messageElement = document.createElement('div');
+                        messageElement.classList.add('message');
+                        messageElement.classList.add('message--received');
+                        messageElement.innerHTML = `
                     <div class = "message__text">${data.completion.content}</div>
                 `;
-                    chatLog.appendChild(messageElement);
-                    chatLog.scrollTop = chatLog.scrollHeight;
-                })
+                        chatLog.appendChild(messageElement);
+                        chatLog.scrollTop = chatLog.scrollHeight;
+                    })
 
-        })
-    </script>
-</body>
+            })
+        </script>
+    </body>
 
 </html>
 <!-- <div class="container">
