--- a/Source/shortTest.html
+++ b/Source/shortTest.html
@@ -1,9 +1,14 @@
+<link rel="stylesheet" type="text/css" href="./css/test.css">
+<link rel="stylesheet" type="text/css" href="./css/anotherone.css">
 <link rel="stylesheet" type="text/css" href="./css/landingPage.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+<!DOCTYPE html>
+<html lang="en">
 <div class="container">
     <div class="drawer">
         <a class="navicon" href="landingPage.html">
@@ -29,3 +34,148 @@
         <span class="credits">EasyRead
         </span>
     </div>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Summarizer</title>
+    </head>
+
+    <body>
+        <main>
+            <h1>Enter Text Below</h1>
+            <form action="">
+                <input type="text" name="message" id="message">
+                <button type="submit">Send</button>
+            </form>
+            <div id="chat-log">
+
+            </div>
+        </main>
+        <script>
+            const chatLog = document.getElementById('chat-log');
+            const message = document.getElementById('message');
+            const form = document.querySelector('form');
+            form.addEventListener('submit', (e) => {
+                e.preventDefault();
+                const messageText = message.value;
+                const messageElement = document.createElement('div');
+                messageElement.classList.add('message');
+                messageElement.classList.add('message--sent');
+                messageElement.innerHTML = `
+                <div class "message__text">${messageText}</div>
+            `;
+                chatLog.appendChild(messageElement);
+                chatLog.scrollTop = chatLog.scrollHeight;
+                fetch('http://localhost:3000', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        message: messageText
+                    })
+                })
+                    .then(res => res.json())
+                    .then(data => {
+                        const messageElement = document.createElement('div');
+                        messageElement.classList.add('message');
+                        messageElement.classList.add('message--received');
+                        messageElement.innerHTML = `
+                    <div class = "message__text">${data.completion.content}</div>
+                `;
+                        chatLog.appendChild(messageElement);
+                        chatLog.scrollTop = chatLog.scrollHeight;
+                    })
+
+            })
+        </script>
+    </body>
+
+</html>
+<!-- <div class="container">
+    <div class="drawer">
+        <a class="navicon" href="landingPage.html">
+            <ion-icon name="home-outline"></ion-icon>
+        </a>
+        <div class="menu">
+            <a data-menu="dashboard" href="Summary.html">
+                <ion-icon name="newspaper-outline"></ion-icon>
+            </a>
+            <a data-menu="users" href="longTest.html">
+                <ion-icon name="document-text-outline"></ion-icon>
+            </a>
+            <a data-dialog="logout" href="shortTest.html">
+                <ion-icon name="document-outline"></ion-icon>
+            </a>
+            <a data-menu="download" href="settings.html">
+                <ion-icon name="settings-outline"></ion-icon>
+            </a>
+            <a data-menu="about" href="index.html">
+                <ion-icon name="exit-outline"></ion-icon>
+            </a>
+        </div>
+        <span class="credits">EasyRead
+        </span>
+    </div>
+
+    <head>
+        <div class="titlediv">
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta http-equiv="X-UA-Compatible" content="ie=edge">
+            <title>ChatGPT API</title>
+        </div>
+    </head>
+
+    <body>
+        <main>
+            <h1>Enter Text</h1>
+            <form action="">
+                <input type="text" name="message" id="message">
+                <button type="submit">Enter</button>
+            </form>
+            <div id="chat-log">
+
+            </div>
+        </main>
+        <script>
+            const chatLog = document.getElementById('chat-log');
+            const message = document.getElementById('message');
+            const form = document.querySelector('form');
+            form.addEventListener('submit', (e) => {
+                e.preventDefault();
+                const messageText = message.value;
+                const messageElement = document.createElement('div');
+                messageElement.classList.add('message');
+                messageElement.classList.add('message--sent');
+                messageElement.innerHTML = `
+                <div class "message__text">${messageText}</div>
+            `;
+                chatLog.appendChild(messageElement);
+                chatLog.scrollTop = chatLog.scrollHeight;
+                fetch('http://localhost:4000', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        message: messageText
+                    })
+                })
+                    .then(res => res.json())
+                    .then(data => {
+                        const messageElement = document.createElement('div');
+                        messageElement.classList.add('message');
+                        messageElement.classList.add('message--received');
+                        messageElement.innerHTML = `
+                    <div class = "message__text">${data.completion.content}</div>
+                `;
+                        chatLog.appendChild(messageElement);
+                        chatLog.scrollTop = chatLog.scrollHeight;
+                    })
+
+            })
+        </script>
+    </body> -->
