--- a/Source/landingPage.html
+++ b/Source/landingPage.html
@@ -53,9 +53,9 @@
                     </div>
                     <div class="body">
                         <p>
-                           Enter a prompt for the Easy Read AI to register and respond to. 
-                           Not the answer your looking for? Try a more specific question 
-                           that is easy for our AI to understand.
+                           Enter a sentence about any topic for the Easy Read AI to register 
+                           and respond to. Not the answer your looking for? Try a more specific 
+                           statement that is easy for our AI to understand.
                            <br><br>
                             <hr>
                             <hr>
@@ -86,14 +86,14 @@
                         </div>
                     </div>
                     <div class="body">
-                        <h2><br>No cheating prohibited in any way or form!</h2>
+                        <h2><br>The following are example prompts:</h2>
                         <p>
                             <br><br>
-                            Can you create me a practice test for my bio test on evolution?
+                            The complexities of World War 1 between Britain and Germany.
                             <br><br>
-                            Could you provide me a detailed description of what cellular respiration is?
+                            Important grammer rules for a 9th grader.
                             <br><br>
-                            How do you traverse through an array using one loop?
+                            The basic syntax for a java array.
                             <br><br>
                             <hr><hr>
 
