--- a/Source/register.html
+++ b/Source/register.html
@@ -1,72 +1,73 @@
+<script async src="https://www.google.com/recaptcha/api.js"></script>
 <!DOCTYPE html>
 <html>
 
-<link rel="stylesheet"  href="./css/register.css">
-<style> 
+<link rel="stylesheet" href="./css/register.css">
+<style>
 
 </style>
-<script type="module" src = "./js/accountsystem.js"></script>
+<script type="module" src="./js/accountsystem.js"></script>
 <div class="page">
-<form>
+  <form>
     <div class="container">
-        <div class="left">
-            <h1 class = "register" >Register</h1>
-            <p><a class = "eula" href="login.html">Already a user? Sign In!</a></p>
+      <div class="left">
+        <h1 class="register">Register</h1>
+        <p><a class="eula" href="login.html">Already a user? Sign In!</a></p>
+        <p><a class="eula">
+            --------------
+            <p><a class="eula">By Signing Up, You Agree To
+                <p><a class="eula" href="tos.html">
+                    Our Terms of Service!</a></p>
+              </a></p>
+          </a></p>
 
-        </div>
-        <div class="right">
-            <svg viewBox="0 0 320 300">
-                <defs>
-                  <linearGradient
-                                  inkscape:collect="always"
-                                  id="linearGradient"
-                                  x1="13"
-                                  y1="193.49992"
-                                  x2="307"
-                                  y2="193.49992"
-                                  gradientUnits="userSpaceOnUse">
-                    <stop
-                          style="stop-color:#738adb;"
-                          offset="0"
-                          id="stop876" />
-                    <stop
-                          style="stop-color:#00b2c9;"
-                          offset="1"
-                          id="stop878" />
-                  </linearGradient>
-                </defs>
-                <path d="m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143" />
-              </svg>
+
+
+      </div>
+      <div class="right">
+        <svg viewBox="0 0 320 300">
+          <defs>
+            <linearGradient inkscape:collect="always" id="linearGradient" x1="13" y1="193.49992" x2="307" y2="193.49992"
+              gradientUnits="userSpaceOnUse">
+              <stop style="stop-color:#738adb;" offset="0" id="stop876" />
+              <stop style="stop-color:#00b2c9;" offset="1" id="stop878" />
+            </linearGradient>
+          </defs>
+          <path
+            d="m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143" />
+        </svg>
         <div class="form">
-            <label for="email">Email</label>
-      <input type="email" id="email">
-      <label for="password">Password</label>
-      <input type="password" id="password">
-      <form>
-        <button type="button" id="submitData" name="submitData" class="registerbtn" onclick="validateAndRedirect()">Register</button>
-      </form>
-    </form>
-    
-    <script>
-      function validateAndRedirect() {
-        const email = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
-        
-        if (email.length >= 3 && password.length >= 3) {
-          window.location.href = "landingPage.html";
-        } else {
-          alert("Enter an email and password that is at least 3 characters long.");
-        }
+          <label for="email">Email</label>
+          <input type="email" id="email">
+          <label for="password">Password</label>
+          <input type="password" id="password">
+
+          <form>
+            <div class="g-recaptcha" data-sitekey="6LdHs3ElAAAAAM1ThCB0HQ7Unl1S_fHYMig53IQv"></div>
+            <button type="button" id="submitData" name="submitData" class="registerbtn"
+              onclick="validateAndRedirect()">Register</button>
+          </form>
+  </form>
+
+  <script>
+    function validateAndRedirect() {
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+
+      if (email.length >= 3 && password.length >= 3) {
+        window.location.href = "landingPage.html";
+      } else {
+        alert("Enter an email and password that is at least 3 characters long.");
       }
-    </script>
-    </form>
-    </div>
-        </div>
-    </div>
+    }
+  </script>
+  </form>
+</div>
+</div>
+</div>
 
 
 </div>
 </body>
 
 </html>
-
