--- a/Source/landingPage.html
+++ b/Source/landingPage.html
@@ -53,22 +53,20 @@
                     </div>
                     <div class="body">
                         <p>
-<<<<<<< Updated upstream
-                           Enter a sentence about any topic for the Easy Read AI to register 
-                           and respond to. Not the answer your looking for? Try a more specific 
-                           statement that is easy for our AI to understand.
-                           <br><br>
-=======
-                            Enter a prompt for the Easy Read AI to register and respond to.
-                            Not the answer your looking for? Try a more specific question
-                            that is easy for our AI to understand.
-                            <br><br>
->>>>>>> Stashed changes
-                            <hr>
-                            <hr>
-                            <br>
-                            Gmail: EasyReadAI@gmail.com <br>
-                            Twitter: @EasyReadAI
+                            <<<<<<< Updated upstream Enter a sentence about any topic for the Easy Read AI to register
+                                and respond to. Not the answer your looking for? Try a more specific statement that is
+                                easy for our AI to understand. <br><br>
+                                =======
+                                Enter a prompt for the Easy Read AI to register and respond to.
+                                Not the answer your looking for? Try a more specific question
+                                that is easy for our AI to understand.
+                                <br><br>
+                                >>>>>>> Stashed changes
+                                <hr>
+                                <hr>
+                                <br>
+                                Gmail: EasyReadAI@gmail.com <br>
+                                Twitter: @EasyReadAI
                         </p>
                     </div>
                     <div class="footer">
