--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="./img/logo.png">
 
-  <link rel="stylesheet" type="text/css" href="./css/coloring.css">
-  <link rel="stylesheet" type="text/css" href="./css/style.css">
-  <link rel="stylesheet" type="text/css" href="./css/txtformatting.css">
-  <link rel="stylesheet" type="text/css" href="./css/shadow.css">
-  <link rel="stylesheet" type="text/css" href="./css/loading.css">
-  <link rel="stylesheet" type="text/css" href="./css/cursor.css">
+  <link rel="stylesheet" type="text/css" href="./Source/css/coloring.css">
+  <link rel="stylesheet" type="text/css" href="./Source/css/style.css">
+  <link rel="stylesheet" type="text/css" href="./Source/css/txtformatting.css">
+  <link rel="stylesheet" type="text/css" href="./Source/css/shadow.css">
+  <link rel="stylesheet" type="text/css" href="./Source/css/loading.css">
+  <link rel="stylesheet" type="text/css" href="./Source/css/cursor.css">
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
   integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
@@ -61,7 +61,7 @@
               and prepare for exams efficiently.</p>
             <div class="jumbotron-buttons">
               <button class="btn" onclick="location.href='#features'">Features</button>
-                <button class="btn blue" onclick="validateAndRedirect()">Get Started</button>
+              <button class="btn blue" onclick="validateAndRedirect()">Get Started</button>
               <script>
                 function validateAndRedirect() {
                   window.location.href = "register.html";
