--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>EasyRead AI</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="./img/logo.png">
+  <link rel="icon" type="image/png" href="./Source/img/logo.png">
 
   <link rel="stylesheet" type="text/css" href="./Source/css/coloring.css">
   <link rel="stylesheet" type="text/css" href="./Source/css/style.css">
@@ -40,9 +40,10 @@
             <!-- You can change the href value and the text value -->
             <div class="navs-item notbtn"><a href="#features" class="txt-uppercase">Features</a></div>
             <div class="navs-item notbtn"><a href="#" class="txt-uppercase">Support</a></div>
-            <div class="navs-item"><a href="register.html"><button
+            <div class="navs-item"><a href="./Source/register.html"><button
                   class="btn txt-uppercase shadow-sm">Register</button></a></div>
-            <div class="navs-item"><a href="login.html"><button class="btn txt-uppercase shadow-sm">Login</button></a>
+            <div class="navs-item"><a href="./Source/login.html"><button
+                  class="btn txt-uppercase shadow-sm">Login</button></a>
             </div>
           </div>
         </div>
@@ -64,13 +65,13 @@
               <button class="btn blue" onclick="validateAndRedirect()">Get Started</button>
               <script>
                 function validateAndRedirect() {
-                  window.location.href = "register.html";
+                  window.location.href = "./Source/register.html";
                 }
               </script>
             </div>
           </div>
           <div class="jumbotron-item">
-            <img src="./img/img.svg" alt="image">
+            <img src="./Source/img/img.svg" alt="image">
           </div>
         </div>
       </div>
@@ -85,7 +86,7 @@
     <div class="container">
       <div class="features">
         <div class="feature">
-          <img class="feature-img" src="./img/feature2.svg"></img>
+          <img class="feature-img" src="./Source/img/feature2.svg"></img>
           <div class="feature-info">
             <h2 class="feature-info-t">Step 1 - Login</h2>
             <p class="feature-info-d">Click on the login button in the top right and follow the steps. If you do not
@@ -93,7 +94,7 @@
           </div>
         </div>
         <div class="feature">
-          <img class="feature-img" src="./img/feature1.png"></img>
+          <img class="feature-img" src="./Source/img/feature1.png"></img>
           <div class="feature-info">
             <h2 class="feature-info-t">Step 2 - Upload Your Article</h2>
             <p class="feature-info-d">After Logging In, you will be redirected to a page where you can upload your
@@ -101,7 +102,7 @@
           </div>
         </div>
         <div class="feature">
-          <img class="feature-img" src="./img/feature3.svg"></img>
+          <img class="feature-img" src="./Source/img/feature3.svg"></img>
           <div class="feature-info">
             <h2 class="feature-info-t">Step 3 - Select Your Task</h2>
             <p class="feature-info-d">After uploading your article, select the type of help that you would like to
@@ -156,8 +157,8 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="./js/script.js"></script>
-  <script type="text/javascript" src="./js/cursor.js"></script>
+  <script type="text/javascript" src="./Source/js/script.js"></script>
+  <script type="text/javascript" src="./Source/js/cursor.js"></script>
 </body>
 
 </html>
