--- a/Source/Summary.html
+++ b/Source/Summary.html
@@ -44,7 +44,7 @@
 
     <body>
         <main>
-            <h1>Enter Text Below</h1>
+            <h1>Summarize</h1>
             <form action="">
                 <input type="text" name="message" id="message">
                 <button type="submit">Send</button>
